--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Lora:700' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700' rel='stylesheet' type='text/css'>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap" rel="stylesheet">
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -22,15 +23,24 @@
         <![endif]-->
 
         <section class="wrapper">
-            <div class="div-1">
+            <header>Hi, I'm Sophia.</header>
+            <main>I am a web development student based out of Vancouver, B.C.</main>
+            <div id="div-1" class="flex-items">
                 <p>slkjdfskdlfj lskdfjsldkfj sfdkjsdlkfj sdlfkjsldkfj sdlfkjsdf sldkfjdslk sldkfjdslkj sdjfoksdl f dsjlkjf sdlkfjdslkjf llkl.</p>
             </div>
-            <div class="div-2">
+            <div id="div-2" class="flex-items">
                 <p>slkjdfskdlfj lskdfjsldkfj sfdkjsdlkfj sdlfkjsldkfj sdlfkjsdf sldkfjdslk sldkfjdslkj sdjfoksdl f dsjlkjf sdlkfjdslkjf llkl.</p>
             </div>
-            <div class="div-3">
+            <div id="div-3" class="flex-items">
                 <p>slkjdfskdlfj lskdfjsldkfj sfdkjsdlkfj sdlfkjsldkfj sdlfkjsdf sldkfjdslk sldkfjdslkj sdjfoksdl f dsjlkjf sdlkfjdslkjf llkl.</p>
             </div>
+
+            <footer>
+              <div class ="git"><a href="https://github.com/Fischer-SK"><img src="img\icon-github.png" alt="github icon" /></a></div>
+              <div class ="twitter"><a href="https://twitter.com/explore"><img src="img\icon-twitter.png" alt="twitter icon" /></a></div>
+              <div class ="insta"><a href="https://www.instagram.com/?hl=en"><img src="img\icon-instagram.png" alt="insta icon" /></a></div>
+              <div class ="linkedin"><a href="https://ca.linkedin.com/"><img src="img\icon-linkedin.png" alt="linkedin icon" /></a></div>
+            </footer>
         </section>
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
